# webrust

./: Cargo.toml  Dockerfile  spec.yaml
configuration/: production.yaml
migrations/: 20240714111328_add_status_to_subscriptions.sql  20240714112021_make_status_not_null_in_subscriptions.sql  20240714112505_create_subscription_tokens_table.sql
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
